# ticl

./: .gitignore  .gitmodules  INSTALL.md  Makefile  README.md  Readme.md  _CoqProject  conf.py  coq-ctree.opam  coq-ictl.opam  coq-ticl.opam  dune-project  index.rst  main.html  requirements.txt  rocq-ticl.opam
.github/workflows/: rocq.yml
_old/: Blocking.v  Fair.v  QuantType.v  Scheduler.v
docs/: main.html
examples/: Count.v  Election.v  Lock.v  Queue.v  Sec.v  Tick.v  Toy.v  dune
examples/CCS/: Denotation.v  OpDenot.v  Operational.v
examples/Coffee/: coffeeCTree.v
examples/ImpBr/: ImpBr.v
examples/SimpleSim/: SimExample.v  dune
examples/Yield/: Lang.v  Par.v  Util.v  dune
examples/function/: and_test.v
examples/t2/: Clang.v  P25.v  P26.v
tests/ImpBrTest/: main.ml
tests/ImpBrTest/ImpBrEx/: ImpBrEx.v
tests/ImpBrTest/extracted/: Extract.v  dune
theories/: .gitignore  Classes.v  Eq.v  ICTree.v  dune
theories/CTree/: Core.v
theories/CTree/Eq/: Bind.v  Core.v
theories/CTree/Events/: Net.v  State.v  Writer.v
theories/CTree/Events/Net/: Uniring.v
theories/CTree/Interp/: Core.v  State.v
theories/CTree/Logic/: AF.v  AG.v  AX.v  Bind.v  CanStep.v  EF.v  EG.v  EX.v  Iter.v  Ret.v  Soundness.v  State.v  Trans.v
theories/CTree/SBisim/: Core.v  SSim.v
theories/Core/: CTreeDefinitions.v  Utils.v
theories/Eq/: CSSim.v  Epsilon.v  Equ.v  IterFacts.v  SBisim.v  SBisimAlt.v  SSim.v  SSimAlt.v  Shallow.v  SumSim.v  Trace.v  Trans.v  Visible.v  WBisim.v
theories/Events/: Core.v  IoE.v  StateE.v  WriterE.v
theories/ICTree/: Core.v  Equ.v  SBisim.v  Trans.v
theories/ICTree/Eq/: Bind.v  Core.v
theories/ICTree/Events/: IO.v  State.v  Writer.v
theories/ICTree/Interp/: Core.v  State.v
theories/ICTree/Logic/: AF.v  AG.v  AX.v  Bind.v  CanStep.v  EF.v  EG.v  EX.v  Iter.v  Ret.v  Soundness.v  State.v  Trans.v
theories/ICTree/SBisim/: Core.v  SSim.v
theories/ITree/Logic/: AF.v
theories/Interp/: Fold.v  FoldCTree.v  FoldStateT.v  ITree.v  Internalize.v  Refine.v
theories/Lang/: Clang.v  HeapImp.v  Maps.v  MeQ.v  MeS.v  Par.v  StImp.v  StImpQ.v  StImpS.v  Vec.v  Yield.v
theories/Logic/: Congruence.v  Core.v  Ctl.v  Kripke.v  Semantics.v  Setoid.v  Syntax.v  Tactics.v  World.v
theories/Misc/: Head.v  Pure.v
theories/Utils/: Trc.v  Utils.v  Vectors.v
